--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="public/style.css">
     <title>Document</title>
     
 </head>
@@ -12,7 +12,7 @@
     <!-- <h1>How are you</h1> -->
     <section class="chat__section">
         <div class="brand">
-            <img src="rocket.png" alt="Logo.png">
+            <img src="public/rocket.png" alt="Logo.png">
             <h1>WhatsApp</h1>
         </div>
 
@@ -40,6 +40,6 @@
 
     <!-- THIS IS CLIENT SIDE LIBRARY -->
     <script src="/socket.io/socket.io.js"></script>
-    <script src="client.js"></script>
+    <script src="public/client.js"></script>
 </body>
 </html>
